add some info, change command

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "wdio-workshop",
+  "version": "0.0.1",
+  "description": "pom with wdio",
+  "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run src/config/wdio.conf.js"
+    "test": "wdio run src/config/wdio.conf.js"
   },
   "devDependencies": {
     "@wdio/cli": "^9.11.0",
